--- a/GG.html
+++ b/GG.html
@@ -96,7 +96,7 @@
               <p>Gigi Trasnfer</p>
             </div>
             <div class="gambar">
-              <img src="img/CV Joint.jpg" />
+              <img src="img/asroda.jpg" />
               <p>CV Joint</p>
             </div>
             <div class="gambar">
